# kardhub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.agent/rules/: constraints.md  conventions.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/cardman-app/: Cargo.toml  Dioxus.toml
crates/cardman-app/assets/: style.css
crates/cardman-app/src/: cache.rs  main.rs
crates/cardman-app/src/components/: board.rs  card.rs  create_issue.rs  detail.rs  login.rs  markdown_editor.rs  mod.rs  settings.rs  sidebar.rs
crates/cardman-core/: Cargo.toml
crates/cardman-core/src/: auth.rs  github.rs  lib.rs  mapping.rs  markdown.rs  models.rs
crates/cardman-extension/: Cargo.toml  background.js  build.sh  content.css  content_loader.js  manifest.json  popup.css  popup.html  popup.js
crates/cardman-extension/src/: dashboard.rs  lib.rs  linker.rs
crates/cardman-wasm-bridge/: Cargo.toml
crates/cardman-wasm-bridge/src/: lib.rs
crates/kardhub-app/: Cargo.toml  Dioxus.toml
crates/kardhub-app/assets/: style.css
crates/kardhub-app/src/: cache.rs  main.rs
crates/kardhub-app/src/components/: board.rs  card.rs  create_issue.rs  detail.rs  login.rs  markdown_editor.rs  mod.rs  sidebar.rs
crates/kardhub-core/: Cargo.toml
crates/kardhub-core/src/: auth.rs  filtering.rs  github.rs  lib.rs  linking.rs  mapping.rs  models.rs
crates/kardhub-extension/: Cargo.toml  background.js  build.sh  content.css  content_loader.js  manifest.json  popup.css  popup.html  popup.js
crates/kardhub-extension/src/: bridge.rs  bridge_glue.js  dashboard.rs  lib.rs  linker.rs
crates/kardhub-wasm-bridge/: Cargo.toml
crates/kardhub-wasm-bridge/src/: lib.rs
docs/architecture/: overview.md
