[workspace]
members = ["crates/cardman-core", "crates/cardman-app", "crates/cardman-extension", "crates/cardman-wasm-bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
regex = "1"
cardman-core = { path = "crates/cardman-core" }
