[package]
name = "cardman-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dioxus desktop application for Cardman."

[dependencies]
dioxus = { version = "0.7", features = ["desktop", "router"] }
cardman-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["time"] }
