[package]
name = "cardman-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-agnostic core logic for Cardman: domain models, card mapping, GitHub API client."

[lib]
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
