[package]
name = "cardman-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-agnostic core logic for Cardman: domain models, card mapping, GitHub API client."

[lib]
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
