[package]
name = "cardman-extension"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dioxus browser extension for Cardman (Chromium + Firefox)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
cardman-core.workspace = true
serde.workspace = true
wasm-bindgen = "0.2"
