[package]
name = "cardman-extension"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dioxus browser extension for Cardman (Chromium + Firefox)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
cardman-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "console",
] }

