[package]
name = "kardhub-wasm-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight WASM bridge exposing kardhub-core logic for the extension content script."

[lib]
crate-type = ["cdylib"]

[dependencies]
kardhub-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
wasm-bindgen = "0.2"
